--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
 
     //lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01")
 }
